src/app/shared/components/nav/nav.component.scss
.sidenav {
  width: 250px;
}

.sidenav-header {
  padding: 22px;
  [class^='mat-'] {
    margin: 0;
  }
}

.app-toolbar {
  position: fixed;
  top: 0;
  z-index: 6;
}

.container {
  padding: 0 16px;
  display: flex;
  align-items: center;
}

.menu-btn {
  margin-right: 8px;
}

.brand-logo-big {
  max-height: 100px;
  margin-bottom: 10px;
}

.brand-logo-small {
  max-height: 24px;
  margin-right: 7px;

  &.hide {
    display: none;
  }
}

.spacer {
  flex: 1 1 auto;
}

main {
  @mixin offset-top($gap) {
    min-height: calc(100vh - #{$gap});
    margin-top: $gap;
  }
  @include offset-top(56px);
  @media (min-width: 600px) {
    @include offset-top(64px);
  }
  display: grid;
  grid-template-rows: auto max-content;
  grid-row-gap: 64px;
  box-sizing: border-box;
}

.p-0 {
  padding: 0;
}

.icon-container {
  $size: 40px;
  height: $size;
  width: $size;
  display: grid;
  place-content: center;
  align-content: center;
  justify-content: center;
}

.theme-change {
  transition: color 500ms;
}

.offline {
  color: #bdbdbd;
}

